--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -30,6 +30,8 @@ body {
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    
+    /* display: none; */
 }
 
 .login > h2 {
@@ -80,13 +82,38 @@ body {
     width: 100%;
     height: 100%;
     display: none;
+    /* display: flex; */
     flex-direction: column;
     justify-content: space-between;
 }
 
+.chat__header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    background: #191919;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.chat__header__button {
+    border: none;
+    background: none;
+    color: #f2f2f2;
+    cursor: pointer;
+}
+
+.chat__header__button > span {
+    font-size: 2.4rem;
+}
+
 .chat__messages {
     flex-grow: 1;
-    padding: 30px 30px 90px;
+    padding: 90px 30px 90px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -155,5 +182,12 @@ body {
     display: block;
     margin-bottom: 15px;
     font-weight: 700;
-    color: aquamarine;
+}
+
+.logged__user {
+    padding: 30px 30px 90px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
